--- a/gm.css
+++ b/gm.css
@@ -6,11 +6,6 @@ For a css class that will be used directly by the dev, use a double-dash (--) in
 
 */
 
-html.b,html.b body,html.b div,html.b h1,html.b h2,html.b h3,html.b h4,html.b h5,html.b h6,html.b ul,html.b ol,html.b li,html.b p,html.b blockquote,pre,html.b form,html.b fieldset,html.b table,html.b th,html.b td {
-    margin: 0;
-    padding: 0;
-}
-
 /*======================================================
 ================== MODALS ==============================
 =======================================================*/
@@ -255,4 +250,8 @@ html.b,html.b body,html.b div,html.b h1,html.b h2,html.b h3,html.b h4,html.b h5,
     width: 0%;
     text-align: center;
     font-size: 25px;
+}
+
+#base {
+    display: none;
 }
